--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -5,12 +5,13 @@
   <title>MyApp</title>
   <base href="/">
   <!-- Compiled and minified CSS -->
-          
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
   <!-- Compiled and minified JavaScript -->
-</body class="container">
+</body>
 </html>
